--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ margin-left: -89px;
 text-align: center;
 }
 
-a {
+.make_button {
 -webkit-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
 -moz-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
 -ms-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
@@ -35,12 +35,12 @@ border-radius: 4px;
 padding: 20px 30px;
 }
 
-a.button {
+.make_button {
 color: rgba(30, 22, 54, 0.6);
 box-shadow: rgba(30, 22, 54, 0.4) 0 0px 0px 2px inset;
 }
 
-a.button:hover {
+.make_button:hover {
 color: rgba(255, 255, 255, 0.85);
 box-shadow: rgba(30, 22, 54, 0.7) 0 0px 0px 40px inset;
 }
