--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
 /* ログインページなどのスタイル */
+/* 背景の三角形 */     
+.background-triangle {
+    display: table;
+    width: 100%;
+    height: 500px;
+    transform: skewY(-10deg);
+}
+
+.background-triangle > * {
+    transform: skewY(10deg);
+}
+
 .loginForm {
     width: fit-content;
     margin: auto;
@@ -21,12 +33,86 @@
     width: 400px;
 }
 
+.loginForm {
+    width: fit-content;
+    margin: auto;
+    padding-top: 75px;
+}
+
+.signupForm table {
+    border-collapse: separate;
+    border-spacing: 16px 0;
+    width: 600px;
+}
+
+.signupForm th {
+    text-align: left;
+    vertical-align:top;
+    width: 150px;
+}
+
+.signupForm td {
+    width: 400px;
+}
+
 table tr + tr th,
 table tr + tr td {
-padding-top: 16px; 
+    padding-top: 16px; 
+}
+
+.bigform {
+    width: 100%;
+    padding: 10px 15px;
+    border: 2px solid;
+    border-radius: 25px;
+    font-size: 16px;
+    box-sizing: border-box;
+}
+
+.bigbutton {
+    margin: 20px auto;
+    display: block;
+    width: 100%;
+    max-width: 250px;
+    padding: .5em 2em;
+    border: none;
+    border-radius: 5px;
+    background-color: #2589d0;
+    color: #fff;
+    font-weight: 600;
+    font-size: 1em;
+}
+
+.bigbutton:hover {
+    animation: anima-button-41 2s linear infinite;
+}
+
+@keyframes anima-button-41 {
+    7% {
+        transform: translateY(-15px);
+    }
+    15% {
+        transform: translateY(0);
+    }
+    20% {
+        transform: translateY(-7px);
+    }
+    25% {
+        transform: translateY(0);
+    }
+}
+
+.bigform:focus {
+    outline: none;
+    box-shadow: 0 0 5px rgba(255, 192, 203, 0.5);
 }
 
 .signup-link {
+    margin-left: 80px;
+    width: 600px;
+}
+
+.login-link {
     margin-left: 80px;
     width: 600px;
 }
