--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ table tr + tr td {
     margin-left: 250px;
 }
 
+/* 履歴書作成ページのスタイル */
 h1 {
     text-align: center;
     padding: 100px;
@@ -162,11 +163,14 @@ text-align: center;
 -o-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
 transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
 display: block;
-margin: 20px auto;
-max-width: 180px;
+margin: 50px 10px;
+position: relative;
+right: 300px;
+max-width: 800px;
 text-decoration: none;
 border-radius: 4px;
 padding: 20px 30px;
+width: 800px;
 }
 
 .make_button {
