--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+/* リセットCSS */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 /* ログインページなどのスタイル */
 /* 背景の三角形 */     
 .background-triangle {
@@ -184,13 +191,6 @@ box-shadow: rgba(30, 22, 54, 0.7) 0 0px 0px 40px inset;
 }
 
 /* 履歴書作成欄 */
-/* リセットCSS */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 p1 {
     color:blue;
     text-decoration:underline;
@@ -204,7 +204,7 @@ body {
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Hiragino Sans",
     "Hiragino Kaku Gothic ProN", "Meiryo", sans-serif;
-    padding: 20px;
+    padding-top: 40px;
     line-height: 1.6;
     color: #333;
 }
